# lichess-bot

./: .gitignore  homemade.py
evaluation/: eval  eval.cpp  eval.py  get_best_move.py  search.py
evaluation/eval_engine/: CMakeLists.txt
evaluation/eval_engine/src/: eval.h  eval.hpp  interface.cpp  main.cpp  script.py
